			* There are currently four camera types
				* CAMERA_TYPE_NORMAL - Normal firstperson camera
				* CAMERA_TYPE_CHASE - A third-person camera
				* CAMERA_TYPE_TOPDOWN - A top-down camera mode :^)
				* CAMERA_TYPE_FREE - A freecam (presently unimplemented)
		* Changed the flags for svc_playerinfo from short to int, as more than 16 bits were needed to pack in all of the flags
	* Changed client prediction to be based on the camera origin rather than the player's origin	
		* This is needed because the original prediction system could not distinguish between the player and the camera, leading to extremely choppy gameplay at a 10Hz tick rate when
		the player was in a non-normal camera type
	* The game now runs at 40Hz instead of 10Hz tick rate
			* This should improve hit registration and many other aspects of network play
	* A dedicated server binary, on Windows as well as Linux...
	* Renamed host_speeds cvar to profile_all
		* Improved strings to be more verbose and use fractions of milliseconds
	* Added zone memory allocation logging
		* Gated behind "log_memalloc" cvar (run the game with +set log_memalloc 1)
	* Implemented localisation into the game
		* The language is controlled by the language cvar
		* Strings are loaded from text\<language->value>\strings.txt (max 1024 strings, 64 key length and 512 key value)
		* They are referred to using the syntax [STRING_KEY] in code. The localisation system will then obtain the value and cache it in case it gets called on again.
		* A maximum of 1,024 localisation strings can be loaded at any one (this limit is also applied to the cached localised strings)
			* A list of dynamically allocated localised strings is kept and added to when a string key that has not been previously localised is found. 
			* Localised strings are cached in memory and returned if the localisation string has already been cached.
	* Made the engine game-agnostic