@@ -20,6 +20,8 @@ NEW FEATURES:
 				* CAMERA_TYPE_TOPDOWN - A top-down camera mode :^)
 				* CAMERA_TYPE_FREE - A freecam (presently unimplemented)
 		* Changed the flags for svc_playerinfo from short to int, as more than 16 bits were needed to pack in all of the flags
+	* Refactored gamemodes
+		* Each gamemode now has its own player spawn and update code
 	* Changed client prediction to be based on the camera origin rather than the player's origin	
 		* This is needed because the original prediction system could not distinguish between the player and the camera, leading to extremely choppy gameplay at a 10Hz tick rate when
 		the player was in a non-normal camera type
@@ -45,6 +47,9 @@ NEW FEATURES:
 		* It stores the name, vendor and some features of cpu in the cpu_name, cpu_vendor and cpu_features cvars respectively.
 		* This is done to detect potentially defective 13th and 14th Gen intel CPUs currently.
 			* For more information: https://alderongames.com/intel-crashes
+	* Massively refactored vector handling code
+		* Split most functions into Vector3 and Vector4 code
+		* Removed obsolete, unused, or only for ancient compiler defines
 	* Changed game binary name to be EuphoriaEngine.exe as this engine will be used for many games to come (hopefully)
 	* Changed intro graphic
 	* Made the engine version a cvar
@@ -52,8 +57,7 @@ NEW FEATURES:
 	* Renamed many gamedll functions for consistency
 	* Wrote a tool to generate an updateinfo.json file automatically:
 		* Changed the updater to use automatically generated updateinfo.json files
-	* Refactored gamemodes
-		* Each gamemode now has its own player spawn and update code
+
 	* Made the time text larger, removed "Time: " and moved it downwards
 	* Engine limits: Increased MAX_GLTEXTURES from 1024 to 2048
 	* Netservices Framework: Changed useragent from "Zombono" to "EuphoriaEngine"
